# VibeStation

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: bios.cpp  bios.h  cdrom.cpp  cdrom.h  cpu.cpp  cpu.h  dma.cpp  dma.h  gpu.cpp  gpu.h  gte.cpp  gte.h  interrupt.cpp  interrupt.h  mdec.cpp  mdec.h  memory_card.cpp  memory_card.h  pad_controller.cpp  pad_controller.h  ram.cpp  ram.h  renderer.cpp  renderer.h  sio.cpp  sio.h  spu.cpp  spu.h  spu_gauss_table.inc  system.cpp  system.h  timer.cpp  timer.h  types.h
src/input/: controller.cpp  controller.h  input_manager.cpp  input_manager.h
src/integrations/: discord_partner_sdk_embed.rc.in  discord_presence.cpp  discord_presence.h
src/ui/: app.cpp  app.h  emu_runner.cpp  emu_runner.h
tests/: idct_test.cpp  idct_test.py  scale_table.txt
